--- a/labs/Lab_03_html_intro/solution/index.html
+++ b/labs/Lab_03_html_intro/solution/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>The Life of ITUshnik</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    <div>
-      <h1>The Life of ITUshnik</h1>
-      <h2>ITUshnik</h2>
-      <img src="images\album.png" alt="Ну очень прикольная картинка"/>
-   </div>
-      <p><a href="https://music.yandex.ru/users/ya.indietronica/playlists/1013" target="_blank">Плейлист</a> для учебы на чиле</p>
-      <p>Один раз послушал - семь раз забил</p>
+        <h1 style="font-size: 31px; text-transform: uppercase; font-style: italic;">The Life of ITUshnik</h1>
+        <h2 style="font-size: 31px;">ITUshnik</h2>
+        <p><a href="https://music.yandex.ru/users/ya.indietronica/playlists/1013" target="_blank">Плейлист</a> для учебы на чиле</p>
+        <p>Один раз послушал - семь раз забил</p>
+        <img src="images\album.png" alt="Ну очень прикольная картинка" width="210px"/>
 </body>
 </html>
